flux/apps/hindsight/deps/networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hindsight-lockdown
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: hindsight
        - matchLabels:
            io.kubernetes.pod.namespace: cnpg-system
        - matchLabels:
            io.kubernetes.pod.namespace: obs-collect
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
            gateway.envoyproxy.io/owning-gateway-name: private-gateway
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8888"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
